--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <h2 class="collectionsTitle">Collections</h2>
         <ul class="collectionsList">
           <li class="collectionsListItem">
-            <img src="img/japan_2.jpg" alt="" />
+            <img src="img/japan_conv.webp" alt="" />
           </li>
           <li class="collectionsListItem">
-            <img src="img/japan_3.jpg" alt="" />
+            <img src="img/japan_coler_conv.webp" alt="" />
           </li>
           <li class="collectionsListItem">
-            <img src="img/fuji.webp" alt="" />
+            <img src="img/mount_conv.webp" alt="" />
           </li>
           <li class="collectionsListItem">
             <img src="img/loool.webp" alt="" />
